[package]
name = "slekup_api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[dependencies]
axum = "0.7.6"
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
